--- a/my-project/src/App.css
+++ b/my-project/src/App.css
@@ -1,4 +1,57 @@
 .App {
   width: 100vw;
   height: 100vh;
+  background-color:#313338;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+}
+
+.Navbar{
+  height: 100%;
+  width: 200px;
+  background-color: #2b2d31;
+}
+
+.NavbarList{
+  height: auto;
+  padding:0;
+  width: 100%;
+}
+
+.NavbarList .row {
+  width: 100%;
+  height: 60px;
+  list-style-type: none;
+  margin: 0%;
+  display: flex;
+  flex-direction: row;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+.NavbarList .row:hover{
+  cursor: pointer;
+  background-color: #3f4248;
+}
+
+.NavbarList #active{
+  background-color: #3f4248;
+
+}
+
+.row #icon{
+  flex: 10%;
+  display: grid;
+  place-items: center;
+
+}
+
+
+.row #title{
+  flex: 70%;
 }
