--- a/my-project/src/App.css
+++ b/my-project/src/App.css
@@ -13,12 +13,18 @@ body{
   height: 100%;
   width: 200px;
   background-color: #2b2d31;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .NavbarList{
   height: auto;
   padding:0;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .NavbarList .row {
