--- a/my-project/src/App.css
+++ b/my-project/src/App.css
@@ -1,63 +1,15 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   width: 100vw;
   height: 100vh;
-  background-color:#313338;
+  background-color:white;
 }
 
 body{
   margin: 0;
   padding: 0;
-}
-
-.Navbar{
-  height: 100%;
-  width: 200px;
-  background-color: #2b2d31;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.NavbarList{
-  height: auto;
-  padding:0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.NavbarList .row {
-  width: 100%;
-  height: 60px;
-  list-style-type: none;
-  margin: 0%;
-  display: flex;
-  flex-direction: row;
-  color: white;
-  justify-content: center;
-  align-items: center;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-}
-
-.NavbarList .row:hover{
-  cursor: pointer;
-  background-color: #3f4248;
-}
-
-.NavbarList #active{
-  background-color: #3f4248;
-
-}
-
-.row #icon{
-  flex: 10%;
-  display: grid;
-  place-items: center;
-
-}
-
-
-.row #title{
-  flex: 70%;
 }
